@@ -1,3 +1,10 @@
+TAG: annotload-3-5-0-2
+DATE: 08/30/2006
+STAFF: lec
+RELEASE: A
+CHANGES:
+a) pre-load annotDict, evidenceDict, objectDict; faster performance
+
 TAG: annotload-3-5-0-1
 DATE: 04/20/2006
 STAFF: lec
